# pngCompress

./: .gitignore  README.md  afterPack.js  electron-builder.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts
.github/workflows/: release.yml
src/: types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/main/: compressor.ts  ipc.ts  main.ts
src/preload/: index.ts
src/renderer/: api.ts  index.css  index.html
src/renderer/components/: Dashboard.tsx
